Corrected count display letters

--- a/res_partner_mails_count/views/res_partner_mails_count.xml
+++ b/res_partner_mails_count/views/res_partner_mails_count.xml
@@ -1,52 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
 	<data>
-		<record id="action_mails_from" model="ir.actions.client">
+		<record id="action_mails_from" model="ir.actions.act_window">
             <field name="name">Mails from</field>
-            <field name="tag">mail.wall</field>
             <field name="res_model">mail.message</field>
+            <field name="view_mode">tree,form</field>
             <field name="context">{
-	            'search_default_model': False,
-	            'default_model': 'res.users',
-	            'default_res_id': uid,
-	            'thread_model': 'res.partner',
-                'active_model': False,
+                'active_test': False,
             }</field>
-            <field name="params" eval="&quot;{
-                'view_mailbox': False,
-                'show_compose_message': False
-            }&quot;"/>
             <field name="help" type="html">
                 <p>
-                    <b>No private message.</b>
-                </p><p>
-                    This list contains messages sent to you.
+                    Mails from
                 </p>
             </field>
         </record>
-		<record id="action_mails_to" model="ir.actions.client">
+		<record id="action_mails_to" model="ir.actions.act_window">
             <field name="name">Mails to</field>
-            <field name="tag">mail.wall</field>
+            <field name="res_model">mail.message</field>
+            <field name="view_mode">tree,form</field>
             <field name="context">{
-              'default_model': 'res.users',
-              'default_res_id': uid,
-              'thread_model': 'res.partner',
-              'needaction_menu_ref': ['mail.mail_tomefeeds']
+                'active_test': False,
             }</field>
-            <field name="params" eval="&quot;{
-                'domain': [
-                    ('notification_ids.partner_id.user_ids', 'in', [uid]),
-                    ('author_id.user_ids', 'in', [uid]),
-                ],
-                'view_mailbox': True,
-                'show_compose_message': False
-            }&quot;"/>
             <field name="help" type="html">
                 <p>
-                    No message found and no message sent yet.
-                </p><p>
-                    Click on the top-right icon to compose a message. This
-                    message will be sent by email if it's an internal contact.
+                    Mails to
                 </p>
             </field>
         </record>
