--- a/res_partner_mails_count/views/res_partner_mails_count.xml
+++ b/res_partner_mails_count/views/res_partner_mails_count.xml
@@ -1,29 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
 	<data>
-		<record id="action_mails_from" model="ir.actions.act_window">
-            <field name="name">Mails from</field>
+		<record id="action_mails" model="ir.actions.client">
+            <field name="name">Mails</field>
+            <field name="tag">mail.wall</field>
             <field name="res_model">mail.message</field>
             <field name="view_mode">tree,form</field>
             <field name="context">{
-                'active_test': False,
+	            'ignore_search_model': True,
             }</field>
             <field name="help" type="html">
                 <p>
-                    Mails from
-                </p>
-            </field>
-        </record>
-		<record id="action_mails_to" model="ir.actions.act_window">
-            <field name="name">Mails to</field>
-            <field name="res_model">mail.message</field>
-            <field name="view_mode">tree,form</field>
-            <field name="context">{
-                'active_test': False,
-            }</field>
-            <field name="help" type="html">
-                <p>
-                    Mails to
+                    Mails not found. Probably, they exist, but you don't have access.
                 </p>
             </field>
         </record>
