--- a/res_partner_mails_count/views/res_partner_mails_count.xml
+++ b/res_partner_mails_count/views/res_partner_mails_count.xml
@@ -3,7 +3,7 @@
     <data>
         <record id="action_mails" model="ir.actions.client">
             <field name="name">Mails</field>
-            <field name="tag">mail.wall</field>
+            <field name="tag">mail.chat.instant_messaging</field>
             <field name="res_model">mail.message</field>
             <field name="context">{
                 'ignore_search_model': True,
@@ -14,5 +14,19 @@
                 </p>
             </field>
         </record>
+
+        <!--<record id="action_mails" model="ir.actions.act_window">-->
+            <!--<field name="name">Mails</field>-->
+            <!--<field name="res_model">mail.message</field>-->
+            <!--<field name="context">{-->
+                <!--'ignore_search_model': True,-->
+            <!--}</field>-->
+            <!--<field name="help" type="html">-->
+                <!--<p>-->
+                    <!--Mails not found. Probably, they exist, but you don't have access.-->
+                <!--</p>-->
+            <!--</field>-->
+        <!--</record>-->
+
     </data>
 </openerp>
