--- a/res_partner_mails_count/views/res_partner_mails_count.xml
+++ b/res_partner_mails_count/views/res_partner_mails_count.xml
@@ -7,6 +7,7 @@
             <field name="res_model">mail.message</field>
             <field name="context">{
                 'ignore_search_model': True,
+                'active_id': 'channel_sent_to'
             }</field>
             <field name="help" type="html">
                 <p>
