--- a/res_partner_mails_count/views/res_partner_mails_count.xml
+++ b/res_partner_mails_count/views/res_partner_mails_count.xml
@@ -6,7 +6,7 @@
             <field name="tag">mail.chat.instant_messaging</field>
             <field name="res_model">mail.message</field>
             <field name="context">{
-                'active_id': 'channel_archive'
+                'active_id': 'channel_all'
             }</field>
             <field name="help" type="html">
                 <p>
