--- a/mail_move_message/static/src/css/mail_move_message.css
+++ b/mail_move_message/static/src/css/mail_move_message.css
@@ -1,13 +1,26 @@
-.openerp .oe_mail .oe_msg .oe_msg_icons .oe_move.oe_moved a {
-	color: #ffefe;
+i.fa.fa-arrows-alt.oe_move.oe_moved {
+	color: #ffefef;
 	text-shadow: 0px 1px #961b1b,0px -1px #961b1b, -1px 0px #961b1b, 1px 0px #961b1b, 0px 3px 3px rgba(0,0,0,0.1);
 }
 
-.openerp .oe_mail .oe_msg .oe_msg_icons .oe_move:hover a {
+i.fa.fa-arrows-alt.oe_move:hover {
 	color: #ffa1a1;
 	text-shadow: 0px 1px #ff0000,0px -1px #ff0000, -1px 0px #ff0000, 1px 0px #ff0000, 0px 3px 3px rgba(0,0,0,0.1);
 }
 
-.openerp.mail_move_message{
-	width: 864px;
+.mail_move_message {
+    width: 864px;
+}
+
+.o_mail_thread .o_thread_message i.oe_move {
+    cursor: pointer;
+    opacity: 0;
+    padding: 4px;
+}
+.o_mail_thread .o_thread_message:hover i.oe_move {
+    opacity: 0.6;
+}
+
+.o_mail_thread .o_thread_message:hover i.oe_move:hover {
+    opacity: 1;
 }
