--- a/mail_move_message/static/src/css/mail_move_message.css
+++ b/mail_move_message/static/src/css/mail_move_message.css
@@ -1,13 +1,7 @@
 i.fa.fa-arrows-alt.oe_move.oe_moved {
-	color: #ffefef;
+	color: #ED6F6A;
 	text-shadow: 0px 1px #961b1b,0px -1px #961b1b, -1px 0px #961b1b, 1px 0px #961b1b, 0px 3px 3px rgba(0,0,0,0.1);
 }
-
-i.fa.fa-arrows-alt.oe_move:hover {
-	color: #ffa1a1;
-	text-shadow: 0px 1px #ff0000,0px -1px #ff0000, -1px 0px #ff0000, 1px 0px #ff0000, 0px 3px 3px rgba(0,0,0,0.1);
-}
-
 .mail_move_message {
     width: 864px;
 }
