[FIX] added notification

--- a/mail_move_message/static/src/css/mail_move_message.css
+++ b/mail_move_message/static/src/css/mail_move_message.css
@@ -1,4 +1,4 @@
-i.fa.fa-arrows-alt.oe_move.oe_moved {
+i.oe_moved {
 	color: #ED6F6A;
 	text-shadow: 0px 1px #961b1b,0px -1px #961b1b, -1px 0px #961b1b, 1px 0px #961b1b, 0px 3px 3px rgba(0,0,0,0.1);
 }
