--- a/mail_to/static/src/css/mail_to.css
+++ b/mail_to/static/src/css/mail_to.css
@@ -8,12 +8,14 @@
 .o_mail_thread .o_thread_message span.recipients_info,
 .o_mail_thread .o_thread_message i.o_thread_message_star,
 .o_mail_thread .o_thread_message i.o_thread_message_reply,
+.o_mail_thread .o_thread_message i.oe_move,
 .o_mail_thread .o_thread_message i.o_thread_message_needaction {
     opacity: 0.4;
 }
 
 .o_mail_thread .o_thread_message:hover i.o_thread_message_star,
 .o_mail_thread .o_thread_message:hover i.o_thread_message_reply,
+.o_mail_thread .o_thread_message:hover i.oe_move,
 .o_mail_thread .o_thread_message:hover i.o_thread_message_needaction {
     opacity: 0.7;
 }
