--- a/mail_all/views/templates.xml
+++ b/mail_all/views/templates.xml
@@ -5,6 +5,7 @@
                   name="mail_all_assets_backend"
                   inherit_id="web.assets_backend">
             <xpath expr="." position="inside">
+                <link rel="stylesheet" href="/mail_all/static/src/css/mail_all.css"/>
                 <script src="/mail_all/static/src/js/mail_all.js" type="text/javascript"></script>
             </xpath>
         </template>
